Fix minor layout issues on realtime visitors

--- a/sass/_uswds-theme-custom-styles.scss
+++ b/sass/_uswds-theme-custom-styles.scss
@@ -181,7 +181,7 @@ ul li::before {
     }
   }
 
-  &__current_visitors {
+  &__current-visitors {
     font-size: 4em;
     margin: 0;
 
@@ -200,6 +200,7 @@ ul li::before {
 }
 
 g.axis {
+
   path,
   line {
     fill: none;
